Feature/fire button visited sites fix (#332)
* Update AGP to latest beta

* Update to support library 28 to match target API version

Requires a few tweaks along the way, mainly around nullability of variables

* Potential interim solution for clearing process on 🔥 button press

* Add competing process-restart implementations

* Remove FireActivity approach to restarting app process

* Move fire process name to strings resources

* Add Lottie to project

* Add flame animation

* Remove fire splash activity layer list

* Fix BrowserActivity menu xml reference

* Show toast upon re-entering app after fire animation

* Configure FireSplashActivity to show Lottie fire animation

* Rename FireSplashActivity to FireActivity

* Subclass FireActivity from AppCompatActivity to avoid dagger binding

* Re-center animation vertically

* Update bitrise.yml with latest config using VDT

* Update to latest AGP plugin

* Ensure FireActivity doesn't re-spawn Browser if user navigates away

* Code tidy

* Tidy up manifest and strings file to remove redundant label

* Code formatting

* Code formatting

* Remove unused styles and colours

* Clear data pixel fired when app restarted; avoid being killed mid-flight

* Rename method to `triggerRestart`

* Code format

* Removed redundant adapter class as one is already provided

--- a/app/src/main/res/layout/activity_fire.xml
+++ b/app/src/main/res/layout/activity_fire.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2017 DuckDuckGo
+  ~ Copyright (c) 2018 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -18,16 +17,25 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_scrollFlags="scroll|enterAlways"
-    tools:context="com.duckduckgo.app.browser.BrowserActivity"
-    tools:menu="@menu/menu_browser_activity">
+    android:background="@color/windowBackground"
+    tools:context="com.duckduckgo.app.fire.FireActivity">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/fireAnimationView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/flame_v2"
+        tools:background="#F00" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
