--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -24,40 +24,43 @@
 
     <TextView
         android:id="@+id/clearAllOption"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:drawablePadding="24dp"
         android:drawableStart="@drawable/icon_fire_glyph_24dp"
+        android:drawablePadding="24dp"
         android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
-        android:paddingBottom="17dp"
-        android:paddingEnd="24dp"
         android:paddingStart="24dp"
         android:paddingTop="24dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="17dp"
         android:text="@string/fireClearAll"
         android:textColor="@color/brickOrange"
         android:textSize="16sp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Drawable tint does not work on API 21 so we have to use a pre-colored drawable -->
     <TextView
         android:id="@+id/cancelOption"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:drawablePadding="24dp"
         android:drawableStart="@drawable/ic_clear_browsnish_24px"
+        android:drawablePadding="24dp"
         android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
-        android:paddingBottom="24dp"
-        android:paddingEnd="24dp"
         android:paddingStart="24dp"
         android:paddingTop="17dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="24dp"
         android:text="@string/fireCancel"
         android:textColor="@color/brownishGray"
         android:textSize="16sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clearAllOption"
         tools:ignore="UnusedAttribute" />
 
