--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -72,12 +72,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bannerNotification"
+            app:layout_constraintTop_toTopOf="parent"
             tools:background="#4F00" />
-
-        <include
-            layout="@layout/include_banner_notification"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/focusDummy"
