--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -30,8 +30,7 @@
         android:icon="@drawable/ic_tabs_gray_24dp"
         android:title="@string/tabsMenuItem"
         app:showAsAction="always"
-        app:actionViewClass="com.duckduckgo.app.browser.TabSwitcherButton"
-        />
+        app:actionViewClass="com.duckduckgo.app.browser.TabSwitcherButton" />
 
     <item
         android:id="@+id/browserPopup"
