--- a/app/src/main/res/drawable/modal_card_button_bg.xml
+++ b/app/src/main/res/drawable/modal_card_button_bg.xml
@@ -19,6 +19,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/modal_card_button_background" />
-    <corners
-        android:radius="3dp"/>
+    <corners android:radius="3dp" />
 </shape>
