--- a/app/src/main/res/drawable/new_tab_set_default_browser_button_background.xml
+++ b/app/src/main/res/drawable/new_tab_set_default_browser_button_background.xml
@@ -19,6 +19,5 @@
     <stroke
         android:width="1dp"
         android:color="#4d4d4d" />
-    <corners
-        android:radius="4dp" />
+    <corners android:radius="4dp" />
 </shape>
