--- a/app/src/main/res/layout/item_privacy_practice.xml
+++ b/app/src/main/res/layout/item_privacy_practice.xml
@@ -19,21 +19,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp"
-    android:paddingEnd="20dp"
     android:paddingStart="20dp"
     android:paddingTop="8dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="8dp"
     tools:background="@android:color/white">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/practicesIconContentGood"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/icon_success"
-        android:contentDescription="@string/practicesIconContentGood" />
+        tools:src="@drawable/icon_success" />
 
     <TextView
         android:id="@+id/description"
