--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -19,9 +19,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="10dp"
     android:layout_marginStart="10dp"
     android:layout_marginTop="10dp"
+    android:layout_marginEnd="10dp"
     android:background="@drawable/tab_background">
 
     <ImageView
@@ -53,20 +53,20 @@
         android:id="@+id/favicon"
         android:layout_width="18dp"
         android:layout_height="18dp"
+        android:layout_marginStart="20dp"
         android:contentDescription="@string/faviconContentDescription"
         android:src="@drawable/ic_globe_gray_16dp"
         app:layout_constraintBottom_toBottomOf="@id/guideBottom"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideTop"
-        android:layout_marginStart="20dp" />
+        app:layout_constraintTop_toTopOf="@id/guideTop" />
 
     <ImageView
         android:id="@+id/close"
         android:layout_width="62dp"
         android:layout_height="0dp"
+        android:background="?selectableItemBackground"
         android:contentDescription="@string/closeContentDescription"
         android:scaleType="center"
-        android:background="?selectableItemBackground"
         android:src="@drawable/ic_close_white_24dp"
         android:tint="@color/grayish"
         app:layout_constraintBottom_toBottomOf="parent"
