--- a/app/src/main/res/color/modal_card_button_background.xml
+++ b/app/src/main/res/color/modal_card_button_background.xml
@@ -16,6 +16,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="@color/subtleGrayTwo" />
+    <item android:color="@color/subtleGrayTwo" android:state_enabled="false" />
     <item android:color="@color/cornflowerBlue" />
 </selector>
