--- a/app/src/main/res/drawable/ic_app_shortcut_fire.xml
+++ b/app/src/main/res/drawable/ic_app_shortcut_fire.xml
@@ -17,8 +17,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="48"
-    android:viewportWidth="48">
+    android:viewportWidth="48"
+    android:viewportHeight="48">
     <path
         android:fillColor="#F5F5F5"
         android:fillType="evenOdd"
