--- a/app/src/main/res/drawable/ic_keyboard_arrow_up_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_keyboard_arrow_up_white_24dp.xml
@@ -17,8 +17,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="24.0"
-    android:viewportWidth="24.0">
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
     <path
         android:fillColor="#FFF"
         android:pathData="M7.41,15.41L12,10.83l4.59,4.58L18,14l-6,-6 -6,6z" />
