--- a/app/src/main/res/drawable/network_tracker_summary_pill_bg.xml
+++ b/app/src/main/res/drawable/network_tracker_summary_pill_bg.xml
@@ -19,8 +19,8 @@
     <solid android:color="@color/warmerGray" />
     <corners android:radius="14dip" />
     <padding
+        android:bottom="0dip"
         android:left="0dip"
-        android:top="0dip"
         android:right="0dip"
-        android:bottom="0dip" />
+        android:top="0dip" />
 </shape>
