--- a/app/src/main/res/drawable/privacygrade_icon_d.xml
+++ b/app/src/main/res/drawable/privacygrade_icon_d.xml
@@ -20,11 +20,11 @@
     android:viewportWidth="22.0"
     android:viewportHeight="22.0">
     <path
-        android:pathData="M10.87,8.27H9.25v5.46h1.605A2.64,2.64 0,0 0,13.61 11a2.54,2.54 0,0 0,-2.74 -2.73z"
+        android:fillColor="#AAA"
         android:fillType="nonZero"
-        android:fillColor="#AAA" />
+        android:pathData="M10.87,8.27H9.25v5.46h1.605A2.64,2.64 0,0 0,13.61 11a2.54,2.54 0,0 0,-2.74 -2.73z" />
     <path
-        android:pathData="M11,0C4.925,0 0,4.925 0,11s4.925,11 11,11 11,-4.925 11,-11A11,11 0,0 0,11 0zM10.87,15.965L6.69,15.965v-9.93h4.165c3.125,0 5.375,1.875 5.375,4.955s-2.23,4.975 -5.36,4.975z"
+        android:fillColor="#AAA"
         android:fillType="nonZero"
-        android:fillColor="#AAA" />
+        android:pathData="M11,0C4.925,0 0,4.925 0,11s4.925,11 11,11 11,-4.925 11,-11A11,11 0,0 0,11 0zM10.87,15.965L6.69,15.965v-9.93h4.165c3.125,0 5.375,1.875 5.375,4.955s-2.23,4.975 -5.36,4.975z" />
 </vector>
