--- a/app/src/main/res/drawable/tab_unread.xml
+++ b/app/src/main/res/drawable/tab_unread.xml
@@ -15,6 +15,7 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
     <solid android:color="#678FFF" />
 </shape>
