--- a/app/src/main/res/layout/add_or_edit_bookmark.xml
+++ b/app/src/main/res/layout/add_or_edit_bookmark.xml
@@ -25,8 +25,8 @@
         android:id="@+id/bookmarkTitleInputContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
 
         <EditText
             android:id="@+id/titleInput"
@@ -41,8 +41,8 @@
         android:id="@+id/bookmarkUrlInputContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/bookmarkTitleInputContainer">
 
         <EditText
