--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -52,13 +52,13 @@
                     android:id="@+id/omniBarContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="5dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/omnibar_editing_background"
-                    android:paddingEnd="6dp"
-                    android:paddingStart="6dp">
+                    android:paddingStart="6dp"
+                    android:paddingEnd="6dp">
 
                     <ImageButton
                         android:id="@+id/privacyGradeButton"
@@ -77,8 +77,8 @@
                         style="@style/Base.V7.Widget.AppCompat.EditText"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:background="@android:color/transparent"
                         android:fontFamily="sans-serif-medium"
                         android:hint="@string/omnibarInputHint"
