--- a/app/src/main/res/layout/item_autocomplete_no_suggestions.xml
+++ b/app/src/main/res/layout/item_autocomplete_no_suggestions.xml
@@ -17,9 +17,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="14dp"
-    android:paddingBottom="4dp"
-    android:layout_height="wrap_content">
+    android:paddingBottom="4dp">
 
     <TextView
         android:layout_width="match_parent"
