--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -75,8 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="20dp"
-            android:paddingTop="13dp">
+            android:paddingTop="13dp"
+            android:paddingBottom="20dp">
 
             <TextView
                 android:id="@+id/newTabPopupMenuItem"
@@ -111,15 +111,15 @@
             <CheckBox
                 android:id="@+id/requestDesktopSiteCheckMenuItem"
                 style="@style/BrowserTextMenuItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:button="@null"
+                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
+                android:drawablePadding="30dp"
                 android:paddingStart="30dp"
                 android:paddingEnd="0dp"
-                android:layout_marginEnd="20dp"
-                android:drawablePadding="30dp"
-                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-                android:text="@string/requestDesktopSiteMenuTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:text="@string/requestDesktopSiteMenuTitle" />
 
             <TextView
                 android:id="@+id/brokenSitePopupMenuItem"
